@@ -2,6 +2,7 @@ package com.robertx22.mine_and_slash.mmorpg.registers.server;
 
 import com.mojang.brigadier.CommandDispatcher;
 import com.robertx22.mine_and_slash.commands.ModifyItem;
+import com.robertx22.mine_and_slash.commands.OpenPickStatsGui;
 import com.robertx22.mine_and_slash.commands.ReloadConfigs;
 import com.robertx22.mine_and_slash.commands.RestoreLevel;
 import com.robertx22.mine_and_slash.commands.entity.*;
@@ -38,6 +39,7 @@ public class CommandRegister {
         GiveBlueprint.register(dispatcher);
         GiveUniqueRune.register(dispatcher);
         SayMapInfo.register(dispatcher);
+        OpenPickStatsGui.register(dispatcher);
 
     }
 }
